# ragavan

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  Justfile  README.md  docker-compose.yml  pyproject.toml
ragavan/: app.py  common.py  first_day.py  ragavan.py  seventeen_lands.py  storage.py
ragavan/assets/: custom.css  dash.css
ragavan/pages/: card_ratings.py  color_ratings.py  index.py  play_draw.py  testing.py
ragavan/ui/: card_ratings.py  card_ratings_difference.py  card_ratings_tabs.py  color_ratings.py  color_ratings_evolution.py  color_ratings_tabs.py  layout.py  nav_button.py  play_draw.py  testing.py
