[tool.poetry]
name = "ragavan"
version = "0.1.0"
description = "MTG limited data analysis tool"
authors = ["AcidBishop"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.16.11"
pandas = "^1.5.3"
plotly = "^5.13.1"
dash = "^2.8.1"
requests = "^2.28.2"
platformdirs = "^3.1.0"
pyarrow = "^11.0.0"
orjson = "^3.8.7"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pylint = "^2.16.4"
pre-commit = "^3.1.1"

[tool.poetry.scripts]
ragavan = "ragavan.ragavan:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
